--- a/docs/assets/css/stylesheet.css
+++ b/docs/assets/css/stylesheet.css
@@ -16,7 +16,7 @@ body {
 
 body {
   font-family: system-ui;
-  font-size: clamp(1rem, calc(0.8rem + .8vw), 1.5rem);
+  font-size: clamp(1rem, 2vw, 1.5rem);
   margin: 1rem;
 }
 
