--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 ---
-<p>{{ page.date | date: "%B %-d, %Y" }}</p>
+<a href="/">← Home</a>
 
 <h1>{{ page.title }}</h1>
+<time datetime="{{ page.date }}">{{ page.date | date: "%B %-d, %Y" }}</time>
 
 {{ content }}
