Styling and wording

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -7,3 +7,11 @@ layout: default
 <time datetime="{{ page.date }}">{{ page.date | date: "%B %-d, %Y" }}</time>
 
 {{ content }}
+
+<footer>
+  ---
+  <br />
+  Zacharias Knudsen, lead programmer at Sonisto
+  <br />
+  Feel free to mail me at <a href="mailto:z@chari.as">z@chari.as</a>
+</footer>
